updated few problems